--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -2,7 +2,19 @@
     width: 640px;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
     border: 1px solid #dedede;
     border-radius: 4px;
+    overflow: hidden;
+}
+
+.accordion-container .accordion-header {
+    background: #fefefe;
+    padding: 5px 10px;
+}
+
+.accordion-container.opened .accordion-header {
+    border-bottom: 1px solid #f0f0f0;
+}
+.accordion-container .accordion-content {
+    padding: 10px;
 }
