--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -18,3 +18,21 @@
 .accordion-container .accordion-content {
     padding: 10px;
 }
+
+.slider-container {
+    width: 1000px;
+    margin: 30px auto;
+    border: 1px solid #f0f0f0;
+}
+
+.slider-container .slides {
+    display: flex;
+    width: 100%;
+    flex-wrap: nowrap;
+}
+
+.slider-container .slides .slide {
+    width: 100%;
+    flex: 0 0 auto;
+    padding: 5px 25px;
+}
