--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -1,3 +1,39 @@
+a {
+    color: red;
+    transition: color 500ms;
+}
+
+a:hover {
+    color: #000;
+}
+
+.cancel-button {
+    background-color: gray;
+    font-size: 18px;
+    color: #fff;
+}
+
+.ok-button {
+    background-color: green;
+    font-size: 18px;
+    color: #fff;
+}
+
+button {
+    transition: all 300ms;
+    cursor: pointer;
+    min-height: 50px;
+    min-width: 150px;
+    border-radius: 5px;
+    border: none;
+}
+
+button:hover {
+    opacity: 0.5;
+}
+
+
+/* Accordion */
 .accordion-container {
     width: 640px;
     margin-left: auto;
@@ -19,6 +55,7 @@
     padding: 10px;
 }
 
+/* Slider */
 .slider-container {
     width: 1000px;
     margin: 30px auto;
@@ -34,15 +71,33 @@
     max-width: 100%;
 }
 
+/* Modal */
 .modal-container {
     width: 600px;
+    max-width: 95%;
+    max-height: 95%;
+    border: 1px solid #dedede;
+    border-radius: 5px;
+    background: #fff;
+    overflow: hidden;
+}
+
+.modal-header,
+.modal-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.modal-footer {
+    padding: 15px;
 }
 
 .modal-close {
     cursor: pointer;
 }
 
-a {
-    color: red;
+.modal-footer {
+    background: #fefefe;
+    border-top: 1px solid #ebebeb;
 }
 
