--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -7,25 +7,15 @@ a:hover {
     color: #000;
 }
 
-.cancel-button {
-    background-color: gray;
-    font-size: 18px;
-    color: #fff;
-}
-
-.ok-button {
-    background-color: green;
-    font-size: 18px;
-    color: #fff;
-}
-
 button {
     transition: all 300ms;
     cursor: pointer;
-    min-height: 50px;
-    min-width: 150px;
     border-radius: 5px;
     border: none;
+    min-height: 50px;
+    padding: 0 15px;
+    min-width: 100px;
+
 }
 
 button:hover {
@@ -101,3 +91,28 @@ button:hover {
     border-top: 1px solid #ebebeb;
 }
 
+.modal-footer .cancel-button {
+    background-color: gray;
+    font-size: 18px;
+    color: #fff;
+}
+
+.modal-footer .ok-button {
+    background-color: green;
+    font-size: 18px;
+    color: #fff;
+}
+
+/* Overlay */
+.overlay-container {
+    max-width: 300px;
+    box-shadow: 0 2px 38px 0 rgb(0 0 0 / 11%);
+}
+
+body {
+    position: relative;
+}
+
+a[data-overlay_target_id].overlay-opened {
+    color: #000;
+}
